--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,13 @@ dependencies:
   path_provider: ^2.1.1
   path: ^1.8.3
   cloud_firestore: ^4.13.0
+  share_plus: ^7.2.1
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
+    sdk: flutter 
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
