--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   share_plus: ^7.2.1
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
+  flex_color_picker: ^3.3.0
 
 dev_dependencies:
   flutter_test:
